Refactor simulation endpoint (#1830)
* refactor simulation endpoint
